# happy-transformer

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_generators.py  happyXLNET.py  main.py  pyproject.toml  requirements.txt  setup.py  wsc_test_fitbert.csv
.github/: pythonapp.yaml
billion_word_challenge/: bwic_output.txt  data_collection_bwic.py  run_bwic.py
bwic/: bwic_output.txt  data_collection_bwic.py  run_bwic.py
data/: eval.csv  test.csv  train.csv
data_collection/: example_generators.py
docs/: Gemfile  _config.yml  index.md  mkdocs.yml
examples/: Finetuning HappyROBERTA.ipynb  sample_data.csv.csv  teaching_transformer.py  test_eval.py
happy-transformer/: happy_transformer.py
happy_transformer/: bert_utils.py  bertfinetune.py  classifier_args.py  classifier_utils.py  data_prep.py  happy_bert.py  happy_gpt2.py  happy_roberta.py  happy_transformer.py  happy_xlm.py  happy_xlnet.py  sequence_classification.py
happytransformer/: __init__.py  args.py  bert_utils.py  cuda_detect.py  fine_tuning_util.py  happy_bert.py  happy_bg_gen.py  happy_generation.py  happy_next_sentence.py  happy_question_answering.py  happy_roberta.py  happy_text_classification.py  happy_text_to_text.py  happy_token_classification.py  happy_trainer.py  happy_transformer.py  happy_word_prediction.py  happy_xlnet.py  math.py  mlm_utils.py  qa_util.py  sentence.py  sequence_classifier.py  tasks_util.py  text.py  tokenize.py  trainer.py  util.py
teaching_transformer/: teaching_transformer.py
testing/: standard_test_data.py  test_bert.py  test_happy_bert.py  test_happy_gpt2.py  test_happy_roberta.py  test_happy_transformer.py  test_happy_xlm.py  test_happy_xlnet.py  test_roberta.py
tests/: __init__.py  (+37 more)
(+179 files in other folders)
