[project]
name = "happytransformer"
version = "3.0.1"
description = "Happy Transformer makes it easy to fine-tune and perform inference with NLP Transformer models."
readme = "README.md"
license = { text = "Apache 2.0" }
authors = [
    { name = "The Happy Transformer Development Team", email = "happytransformer@gmail.com" },
]
keywords = [
    "ai",
    "transformer",
    "happy",
    "HappyTransformer",
    "classification",
    "nlp",
    "nlu",
    "training",
    "fine-tuning"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2",
    "tqdm>=4.43",
    "transformers>=4.46.0,<5.0.0",
    "datasets>=2.15.0,<3.0.0",
    'dataclasses; python_version < "3.7"',
    "sentencepiece",
    "protobuf",
    "accelerate>=1.3.0,<2.0.0",
    "tokenizers>=0.20.0,<1.0.0",
    "wandb",
]

[project.urls]
Homepage = "https://happytransformer.com"
Repository = "https://github.com/EricFillion/happy-transformer"

[tool.setuptools.packages.find]
include = ["happytransformer"]
exclude = ["happytransformer.tests", "tests", "tests.*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
